# salesforce_tools

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/salesforce_tools/: __init__.py  salesforce_tools.py
tests/: test_salesforce_tools.py
