[tool.poetry]
name = "salesforce_tools"
version = "0.1.0"
description = "A package for working with data from Salesforce"
authors = ["Corey Rastello"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
simple-salesforce = ">=1.12.6"
matplotlib = ">=3.10.0"
pandas = ">=2.2.3"
datetime = ">=5.5"
numpy = ">=2.2.2"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
